@@ -24,7 +24,7 @@
       trackResetOnLoad: true,
     }
 
-    if (!this.bbar) this.bbar = {xtype: 'toolbar'}; // an empty bbar by default, so that we can dynamically add buttons
+    if (!this.bbar && !this.readOnly) this.bbar = {xtype: 'toolbar'}; // an empty bbar by default, so that we can dynamically add buttons
 
     // Custom error reader. We don't use it to process form values, but rather to normalize the response from the server in case of "real" (iframe) form submit.
     ErrorReader = function(){};
@@ -55,7 +55,7 @@
     if (this.record) { this.setFormValues(this.record); }
 
     // render in display mode?
-    if (this.locked) this.setReadonlyMode(true);
+    if (this.locked || this.readOnly) this.setReadonlyMode(true);
   },
 
   onEdit: function(){
@@ -201,7 +201,7 @@
     // this.getForm().cleanDestroyed(); // because fields inside of composite fields are not auto-cleaned!
     this.doLayout();
     this.inReadonlyMode = onOff;
-    this.updateToolbar();
+    if (this.mode == "lockable") this.updateToolbar();
   },
 
   // recursively extract field names
